[package]
name = "mpl"
version = "0.1.0"
edition = "2021"
authors = ["Carsten Ramke <carsten.ramke@gmail.com>"]
description = "MO PLAnning library."
license = "Apache-2.0"
keywords = ["prm", "robotics", "path planning", "probabilistic algorithm", "motion planning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
rand = "0.8.5"
wkt = "0.10.3"
geo-types = "0.7.8"
geo = "0.23.1"
rstar = "0.10.0"