[package]
name = "mpl"
version = "0.1.0"
edition = "2021"
authors = ["Carsten Ramke <carsten.ramke@gmail.com>"]
description = "motion planning library."
license = "Apache-2.0"
keywords = ["prm", "robotics", "path planning", "probabilistic algorithm", "motion planning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "^0.32.0"
num = "^0.4.1"
petgraph = "^0.8.3"
rand = "0.8.5"
rstar = "0.11.0"
wkt = "^0.14.0"
